Renaming view return wrong error on sharded cluster (2nd attempt)

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.0-rc8, 6.0.9, 7.0.2, 5.0.22
    • Affects Version/s: 7.1.0-rc0, 6.0.6, 5.0.18, 7.0.0-rc4
    • Component/s: None
    • None
    • Sharding EMEA
    • Fully Compatible
    • ALL
    • v7.0, v6.0, v5.0
    • Sharding EMEA 2023-06-26, Sharding EMEA 2023-07-10, Sharding EMEA 2023-07-24
    • 35
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-66744 we did a first attempt to fix this. Unfortunately the returned errors are not always the same between sharded cluster and replicaset.

      In particular in sharded clusters renaming a collection to a namespace for which already exists a view should return NamespaceExists instead of CommandNotSupportedOnView.

      Moreover test cases for this should be placed in a core test rather than sharding/rename.js since the bheaviour should be exactly the same between replicaset and sharded cluster.

            Assignee:
            Enrico Golfieri
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: