SERVER-78217 Renaming view return wrong error on sharded cluster (2nd attempt)